Added loudness detector, enhanced histogram

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 	<script src="dpd.js"></script>
 	<script src="js/stats.js"></script>
+	<script src="js/visualizer/freqDrawer.js"></script>
+	<script src="js/loudnessdetector.js"></script>
 	<script src="js/effects.js"></script>
 	<script src="js/visualizer/visualizer.js"></script>
 
@@ -17,6 +19,7 @@
 <body>
 	<div id="arranger">
 		<canvas id="view1" width="1000" height="400"></canvas><br>
+		<canvas id="view2" width="1000" height="400"></canvas><br>
 	</div>
 </body>
 </html>
